# reflect

./: .gitignore  BENCH.md  CLAUDE.md  README.md  SKILL.md  SPEC.md  WIKI_PLAN.md  install.sh  mkdocs.yml  pyproject.toml  reflect
.claude/agents/: keeper.md
.claude/skills/entire-cli/: SKILL.md  (+1 more)
.cursor/agents/: keeper.md
.github/workflows/: ci.yml  docs.yml  release.yml
.reflect/: .last_run  context.md  format.yaml  harness  index.md
.reflect/decisions/: 0003-remove-legacy-backward-compat.md
.reflect/insights/: keep-descriptions-aligned.md
.reflect/sessions/: 2026-04-03_816ec965.md  2026-04-03_bbf459e9.md
.reflect/wiki/: log.md
01/fb74b4ff0c/: metadata.json
07/3406f183b0/: metadata.json
14/431d424b86/: metadata.json
3f/10d4ade5ea/: metadata.json
4b/41fc90ca07/: metadata.json
81/6ec9657163/: metadata.json
9c/595bc9b42d/: metadata.json
b5/730bc2eca3/: metadata.json
bd/4cde175301/: metadata.json
bd/d0e5492e95/: metadata.json
bench/: __main__.py  cli.py  config.py  sandbox.py
bench/loop/: checker.py
bench/tasks/: registry.py  self_tasks.json
c9/60454549ca/: metadata.json
docs/: commands.md  configuration.md  index.md  install.md  skill.md
docs/badges/: cache_hit.json  checkpoints.json  learnings.json  open_threads.json  pitfalls.json  sessions_total.json  sessions_window.json  tokens.json
docs/hooks/: cli_reference.py
e2/78aa00b4e6/: metadata.json
evals/: evals.json
harness/: default.py
hooks/: session-start.sh
lib/: context.py  evidence.py  fmt.py  improve.py  ingest.py  init.py  lint.py  metrics.py  search.py  sessions.py  sources.py  status.py  version.py  why.py  wiki.py
scripts/: build-tar.sh  smoke.sh
skill/: SKILL.md
skill/agents/: keeper.md  reflect-query.md
src/reflect/: __init__.py  __main__.py  _version.py  cli.py  context.py  evidence.py  exit_codes.py  improve.py  ingest.py  init.py  lint.py  metrics.py  search.py  sessions.py  sources.py  status.py  timeline.py  wiki.py
templates/: builder.md  context-format.md  decision-format.md  e2e-tester.md  file-knowledge-format.md  format.yaml  insight-format.md  orchestrator.md  researcher.md  session-analyzer.md  session-format.md  verifier.md
tests/: conftest.py  test_cli.py  test_exit_codes.py  test_format.py  test_wiki.py
(+74 files in other folders)
